--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,21 +1,37 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>Clima app</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
 <body>
     <div class="container mt-5">
-        <h1 class="text-center mb-4">Clima app</h1>
+        <h1 class="text-center mb-4">Climas más buscados</h1>
+        <div class="mt-4 text-center">
+            <table class="table">
+                <thead>
+                    <tr>
+                        <th>Ciudad</th>
+                        <th>Temperatura</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr th:each="clima : ${climas}">
+                        <td th:text="${clima.ciudad}"></td>
+                        <td th:text="${clima.temperatura}"></td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
 
-        <form th:action="@{/clima}" method="get" class="text-center">
-            <input type="text" name="ciudad" class="form-control mb-3" placeholder="Enter city name" required>
-            <button type="submit" class="btn btn-primary btn-block">Get Weather</button>
+        <form th:action="@{/clima}" method="get" class="text-center mt-4">
+            <input type="text" name="ciudad" class="form-control mb-3" placeholder="Introduce el nombre de la ciudad" required>
+            <button type="submit" class="btn btn-primary btn-block">Obtener temperatura</button>
         </form>
 
         <div th:if="${clima}" class="mt-4 text-center">
-            <h2>Weather for <span th:text="${clima.ciudad}"></span></h2>
-            <p>Temperature: <span th:text="${clima.temperatura}"></span> &#8451;</p>
+            <h2>Temperatura para <span th:text="${clima.ciudad}"></span></h2>
+            <p>Actualmente <span th:text="${clima.temperatura}"></span> &#8451;</p>
         </div>
     </div>
 
