Ahora no hace falta buscar para que aparezcan los climas mas buscados

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -18,7 +18,7 @@
                 <tbody>
                     <tr th:each="clima : ${climas}">
                         <td th:text="${clima.ciudad}"></td>
-                        <td th:text="${clima.temperatura}"></td>
+                        <td th:text="${clima.temperatura} + ' °C'"></td>
                     </tr>
                 </tbody>
             </table>
